--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2708
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\margl1440\margr1440\vieww14080\viewh18000\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
-
-\f0\fs24 \cf0 <html>\
-	<h1>\
-		Hey, this is my first website!\
-	</h1>\
-	<body>\
-		<h2> About me<h2>\
-		<p>\
-			I am dipping my toes into tech, specifically cybersecurity.\
-			I have earned my Google Cybersecurity Certificate and am now studying for the Security +\
-			Besides that, I am earning my degree in Engineering Physics at SFA University\
-		</p>\
-	<body>\
-<html>}
+<html>
+	<h1>
+		Hey, this is my first website!
+	</h1>
+	<body>
+		<h2> About me<h2>
+		<p>
+			I am dipping my toes into tech, specifically cybersecurity.
+			I have earned my Google Cybersecurity Certificate and am now studying for the Security +
+			Besides that, I am earning my degree in Engineering Physics at SFA University
+		</p>
+	<body>
+<html>
