--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 	<body>
 		<h2> About me<h2>
 		<p>
-			I am dipping my toes into tech, specifically cybersecurity.
-			I have earned my Google Cybersecurity Certificate and am now studying for the Security +
-			Besides that, I am earning my degree in Engineering Physics at SFA University
+			Blackjack.
 		</p>
 	<body>
 <html>
